Fix mobile svg overflow padding issue

--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,18 @@ body {
 .button > :not(:last-child) {
 	margin-right: 10px;
 }
-.button-svg {
-	height: 24px;
-	width: 24px;
-	background-color: white;
-	overflow: visible;
+.button-svg-wrapper {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	height: 44px;
+	width: 44px;
 	border-radius: 50%;
-	padding: 10px;
+	background-color: white;
+}
+.button-svg {
+	height: 28px;
+	width: 28px;
 }
 
 .content-wrapper {
